# tiny_data_warehouse

./: .env  .gitignore  AGENTS.md  README.ja.md  Taskfile.yml  index.html  install.sh  package-lock.json  package.json  readme.md
.agent-rules/: cautions.md  development-process.md  document-management.md  issue-development.md  project-structure.md
.github/: CODEOWNERS
.github/workflows/: create-release.yml  enforce-merge-flow.yml  staging-to-main-pr.yml
dbt_examples/: dbt_project.yml  profiles.yml
dbt_examples/models/examples/: my_first_dbt_model.sql  stg_sales.sql
docs/: dbt-integration.ja.md  dbt-integration.md  sidebar.ja.md  sidebar.md
scripts/: release.sh
scripts/samples/saas_marketing/: 01_generate.sql  02_summary.sql
scripts/samples/sample_saas_marketing/: 01_generate.sql  (+1 more)
src/: App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: dump_jobs.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  cron_engine.rs  error.rs  lib.rs  main.rs  metadata_yml.rs  scheduler.rs  utils.rs
src-tauri/src/commands/: config.rs  csv.rs  explorer.rs  json.rs  macros.rs  metadata.rs  mod.rs  query.rs  scheduled_jobs.rs  scheduler_commands.rs  scripts.rs  udf.rs
src-tauri/src/db/: connection.rs  mod.rs  sql_util.rs  types.rs  worker.rs
src-tauri/src/file_io/: csv.rs  format.rs  json.rs  mod.rs  parquet.rs
src-tauri/src/mcp/: mod.rs
src-tauri/tests/: db_worker.rs
src-tauri/tests/fixtures/: sample.csv  sample.json
src/hooks/: useExecuteQuery.ts  useKeyboardShortcuts.ts  useRunQuery.ts
src/store/: appStore.ts
(+24 files in other folders)
