[package]
name = "tiny-data-ware-house"
version = "0.1.6"
description = "Tiny Data Ware House"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tiny_data_ware_house_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "time", "macros", "io-util", "io-std", "rt", "net"] }
axum = "0.7"
anyhow = "1"
notify = "6"
tauri-plugin-dialog = "2.6.0"
serde_yaml = "0.9"
dirs = "5"
thiserror = "1"
cron = "0.12"
chrono = "0.4"

